--- a/src/pages/upcoming/upcoming.html
+++ b/src/pages/upcoming/upcoming.html
@@ -13,7 +13,7 @@
     </ion-navbar>
   </ion-header>
 <ion-content padding>
-    <ion-searchbar></ion-searchbar>
+  <ion-searchbar (ionInput)="onEvent($event)"></ion-searchbar>
     
     <ion-item *ngFor="let upcomingmovie of moviesArray" 
     (click)="Moviedetail(upcomingmovie)">
