--- a/src/pages/top-rated/top-rated.html
+++ b/src/pages/top-rated/top-rated.html
@@ -7,9 +7,11 @@
 <ion-header>
     <ion-navbar>
       <ion-title text-center> Top Rated </ion-title>
-      <button ion-button icon-only ion-button menuToggle>
-        <ion-icon name="home"></ion-icon>
-      </button>
+      <ion-buttons end>
+          <button ion-button icon-only>
+            <ion-icon name="home"></ion-icon>
+          </button>
+        </ion-buttons>
     </ion-navbar>
   </ion-header>
 
