--- a/src/pages/upcoming/upcoming.html
+++ b/src/pages/upcoming/upcoming.html
@@ -7,9 +7,11 @@
 <ion-header>
     <ion-navbar>
       <ion-title text-center>Upcoming</ion-title>
-      <button ion-button icon-only ion-button menuToggle>
-        <ion-icon name="logo-windows"></ion-icon>
-      </button>
+      <ion-buttons end>
+          <button ion-button icon-only>
+            <ion-icon name="home"></ion-icon>
+          </button>
+        </ion-buttons>
     </ion-navbar>
   </ion-header>
 <ion-content padding>
